implement authentication service, security filters, and core configuration for LOS backend